trabajando con CARD

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
+.title {
+  text-align: center;
+}
 .container {
-
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+  width: 80vw;
+  margin: 0 auto;
 }
 .card {
-
+  border: 2px solid yellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .card-name {
 
