--- a/src/components/Contador.css
+++ b/src/components/Contador.css
@@ -13,3 +13,9 @@ main {
   user-select: none;
   cursor: pointer;
 }
+.container-contador {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
